initial commit -Html completed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <script src="/Javascript/projects/rock-paper-scissors/index.js"></script>
+    <h1>Rock Paper Scissors</h1>
+    <div class="game-container">
+        <div class="playBoard">
+            <div class="playerChoice">
+                <h3>You : <span id="userScore">0</span></h3>
+                <img id="userSelect"src="#" alt="none" srcset="">
+            </div>
+            <div class="computerChoice">            
+                <h3>Computer : <span id="computerScore">0</span></h3>
+                <img  id="computerSelect"src="#" alt="none" srcset="">
+            </div>
+        </div>
+        <span>Choose One!</span>
+        <div class="buttons">
+            <a id="rock"><img src="/Javascript/projects/rock-paper-scissors/rock.svg" alt="rock_button" srcset=""></a>
+            <a id="paper"><img src="/Javascript/projects/rock-paper-scissors/paper.svg" alt="paper_button" srcset=""></a>
+            <a id="scissors"><img src="/Javascript/projects/rock-paper-scissors/scissors.svg" alt="scissors_button" srcset=""></a>
+        </div>
+    </div>
+    <!-- <script src="/Javascript/projects/rock-paper-scissors/index.js"></script> -->
 </body>
 </html>
