--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="playBoard">
             <div class="playerChoice bgcolor">
                 <h3>You : <span id="userScore">0</span></h3> <!-- use an alert to change the you to player name -->
-                <img id="userSelect"src="/Javascript/projects/rock-paper-scissors/rock.svg" alt="none" srcset="">
+                <img id="userSelect"src="#" alt="none" srcset="">
             </div>
             <div class="computerChoice bgcolor">            
                 <h3>Computer : <span id="computerScore">0</span></h3>
@@ -34,9 +34,9 @@
     </div>
     <!-- Pop up skeleton for game result -->
  
-    <div class="overlay"></div>
-    <div class="modal">
-        <p id="Modal-title">You Won!</p>
+    <div class="overlay inactive"></div>
+    <div class="modal inactive">
+        <p id="modalTitle">You Won!</p>
         <button class="Modal-btn" id="reset">Try again</button>
             </div>
           
