--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <div class="playBoard">
             <div class="playerChoice bgcolor">
                 <h3>You : <span id="userScore">0</span></h3> <!-- use an alert to change the you to player name -->
-                <img id="userSelect"src="#" alt="none" srcset="">
+                <img id="userSelect"src="/Javascript/projects/rock-paper-scissors/qmark.svg" alt="none" srcset="">
             </div>
             <div class="computerChoice bgcolor">            
                 <h3>Computer : <span id="computerScore">0</span></h3>
-                <img  id="computerSelect"src="#" alt="none" srcset="">
+                <img  id="computerSelect"src="/Javascript/projects/rock-paper-scissors/qmark.svg" alt="none" srcset="">
             </div>
             
         </div>
