--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <script src="/Javascript/projects/rock-paper-scissors/index.js" defer></script> 
 </head>
 <body>
+    <!-- Background Image -->
 <img src="/Javascript/projects/rock-paper-scissors/rps.jpg" alt="" class="bg">
-    
+
     <div class="game-container">
         <h1>Rock Paper Scissors</h1>
         <p>First to score 5 points wins.</p>
