minor updates but still not responsive

--- a/Html/index.html
+++ b/Html/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="/Javascript/projects/rock-paper-scissors/index.js" defer></script> 
+    <link rel="stylesheet" href="/Css/style.css">
+    <script src="/Js/index.js" defer></script> 
 </head>
 <body>
     <!-- Background Image -->
-<img src="/Javascript/projects/rock-paper-scissors/rps.jpg" alt="" class="bg">
+<img src="/images/rps.jpg" alt="" class="bg">
 
     <div class="game-container">
         <h1>Rock Paper Scissors</h1>
@@ -18,19 +18,19 @@
         <div class="playBoard">
             <div class="playerChoice bgcolor">
                 <h3>You : <span id="userScore">0</span></h3> <!-- use an alert to change the you to player name -->
-                <img id="userSelect"src="/Javascript/projects/rock-paper-scissors/qmark.svg" alt="none" srcset="">
+                <img id="userSelect"src="/images/qmark.svg" alt="question mark" srcset="">
             </div>
             <div class="computerChoice bgcolor">            
                 <h3>Computer : <span id="computerScore">0</span></h3>
-                <img  id="computerSelect"src="/Javascript/projects/rock-paper-scissors/qmark.svg" alt="none" srcset="">
+                <img  id="computerSelect"src="/images/qmark.svg" alt="question mark" srcset="">
             </div>
             
         </div>
         <span class="choice">Choose One!</span>
         <div class="buttons">
-            <button class="btn" id="rock"><img src="/Javascript/projects/rock-paper-scissors/rock.svg" alt="rock_button" srcset=""></button>
-            <button class="btn" id="paper"><img src="/Javascript/projects/rock-paper-scissors/paper.svg" alt="paper_button" srcset=""></button>
-            <button class="btn" id="scissors"><img src="/Javascript/projects/rock-paper-scissors/scissors.svg" alt="scissors_button" srcset=""></button>
+            <button class="btn" id="rock"><img src="/images/rock.svg" alt="rock_button" srcset=""></button>
+            <button class="btn" id="paper"><img src="/images/paper.svg" alt="paper_button" srcset=""></button>
+            <button class="btn" id="scissors"><img src="/images/scissors.svg" alt="scissors_button" srcset=""></button>
         </div>
     </div>
     <!-- Pop up skeleton for game result -->
